parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmtList
Rule 2     stmtList -> statement stmtList
Rule 3     stmtList -> END
Rule 4     statement -> SET setList
Rule 5     setList -> paraStmt setList
Rule 6     setList -> END
Rule 7     paraStmt -> parameter literal
Rule 8     parameter -> NAME
Rule 9     literal -> STRING
Rule 10    literal -> NUMBER
Rule 11    literal -> FLOAT
Rule 12    statement -> READ_GRAPH filePath stmtList
Rule 13    statement -> READ_PICTURE newObject filePath
Rule 14    filePath -> literal
Rule 15    outPath -> literal
Rule 16    dataObject -> NAME
Rule 17    newObject -> NAME
Rule 18    statement -> FIT newObject
Rule 19    statement -> TIME_LINE dataObject outPath
Rule 20    statement -> FIT newObject literal literal literal literal
Rule 21    statement -> FIT newObject literal literal
Rule 22    statement -> FIT newObject literal literal literal literal literal literal
Rule 23    statement -> DISTRICT_ANALYZE dataObject dataObject outPath literal literal
Rule 24    statement -> FILTER dataObject newObject dataObject literal literal
Rule 25    statement -> FILTER dataObject newObject dataObject
Rule 26    statement -> FILTER dataObject newObject literal literal
Rule 27    statement -> CORRELATION dataObject dataObject outPath
Rule 28    statement -> POLYGON newObject pointList
Rule 29    statement -> CIRCLE newObject literal literal literal
Rule 30    pointList -> literal literal pointList
Rule 31    pointList -> <empty>
Rule 32    statement -> MERGE newObject dataObjectList
Rule 33    statement -> MERGE SAME_TIME newObject dataObjectList
Rule 34    dataObjectList -> dataObject dataObjectList
Rule 35    dataObjectList -> <empty>
Rule 36    statement -> READ_MOLECULE newObject filePath
Rule 37    statement -> WRITE_MOLECULE dataObject outPath
Rule 38    statement -> SCATTER newObject scatterList
Rule 39    scatterList -> parameter literal scatterList
Rule 40    scatterList -> END
Rule 41    markList -> mark_sub markList
Rule 42    markList -> END
Rule 43    statement -> MARK dataObject outPath literal literal literal markList
Rule 44    statement -> MARK dataObject outPath literal literal markList
Rule 45    statement -> MARK dataObject outPath literal markList
Rule 46    statement -> MARK dataObject outPath markList
Rule 47    mark_sub -> dataObject dataObject

Terminals, with rules where they appear

CIRCLE               : 29
CORRELATION          : 27
DISTRICT_ANALYZE     : 23
END                  : 3 6 40 42
FILTER               : 24 25 26
FIT                  : 18 20 21 22
FLOAT                : 11
MARK                 : 43 44 45 46
MERGE                : 32 33
NAME                 : 8 16 17
NUMBER               : 10
POLYGON              : 28
READ_GRAPH           : 12
READ_MOLECULE        : 36
READ_PICTURE         : 13
SAME_TIME            : 33
SCATTER              : 38
SET                  : 4
STRING               : 9
TIME_LINE            : 19
WRITE_MOLECULE       : 37
error                : 

Nonterminals, with rules where they appear

dataObject           : 19 23 23 24 24 25 25 26 27 27 34 37 43 44 45 46 47 47
dataObjectList       : 32 33 34
filePath             : 12 13 36
literal              : 7 14 15 20 20 20 20 21 21 22 22 22 22 22 22 23 23 24 24 26 26 29 29 29 30 30 39 43 43 43 44 44 45
markList             : 41 43 44 45 46
mark_sub             : 41
newObject            : 13 18 20 21 22 24 25 26 28 29 32 33 36 38
outPath              : 19 23 27 37 43 44 45 46
paraStmt             : 5
parameter            : 7 39
pointList            : 28 30
program              : 0
scatterList          : 38 39
setList              : 4 5
statement            : 2
stmtList             : 1 2 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmtList
    (2) stmtList -> . statement stmtList
    (3) stmtList -> . END
    (4) statement -> . SET setList
    (12) statement -> . READ_GRAPH filePath stmtList
    (13) statement -> . READ_PICTURE newObject filePath
    (18) statement -> . FIT newObject
    (19) statement -> . TIME_LINE dataObject outPath
    (20) statement -> . FIT newObject literal literal literal literal
    (21) statement -> . FIT newObject literal literal
    (22) statement -> . FIT newObject literal literal literal literal literal literal
    (23) statement -> . DISTRICT_ANALYZE dataObject dataObject outPath literal literal
    (24) statement -> . FILTER dataObject newObject dataObject literal literal
    (25) statement -> . FILTER dataObject newObject dataObject
    (26) statement -> . FILTER dataObject newObject literal literal
    (27) statement -> . CORRELATION dataObject dataObject outPath
    (28) statement -> . POLYGON newObject pointList
    (29) statement -> . CIRCLE newObject literal literal literal
    (32) statement -> . MERGE newObject dataObjectList
    (33) statement -> . MERGE SAME_TIME newObject dataObjectList
    (36) statement -> . READ_MOLECULE newObject filePath
    (37) statement -> . WRITE_MOLECULE dataObject outPath
    (38) statement -> . SCATTER newObject scatterList
    (43) statement -> . MARK dataObject outPath literal literal literal markList
    (44) statement -> . MARK dataObject outPath literal literal markList
    (45) statement -> . MARK dataObject outPath literal markList
    (46) statement -> . MARK dataObject outPath markList

    END             shift and go to state 1
    SET             shift and go to state 7
    READ_GRAPH      shift and go to state 12
    READ_PICTURE    shift and go to state 16
    FIT             shift and go to state 6
    TIME_LINE       shift and go to state 10
    DISTRICT_ANALYZE shift and go to state 13
    FILTER          shift and go to state 8
    CORRELATION     shift and go to state 4
    POLYGON         shift and go to state 18
    CIRCLE          shift and go to state 11
    MERGE           shift and go to state 19
    READ_MOLECULE   shift and go to state 3
    WRITE_MOLECULE  shift and go to state 2
    SCATTER         shift and go to state 15
    MARK            shift and go to state 14

    statement                      shift and go to state 5
    program                        shift and go to state 9
    stmtList                       shift and go to state 17

state 1

    (3) stmtList -> END .

    END             reduce using rule 3 (stmtList -> END .)
    SET             reduce using rule 3 (stmtList -> END .)
    READ_GRAPH      reduce using rule 3 (stmtList -> END .)
    READ_PICTURE    reduce using rule 3 (stmtList -> END .)
    FIT             reduce using rule 3 (stmtList -> END .)
    TIME_LINE       reduce using rule 3 (stmtList -> END .)
    DISTRICT_ANALYZE reduce using rule 3 (stmtList -> END .)
    FILTER          reduce using rule 3 (stmtList -> END .)
    CORRELATION     reduce using rule 3 (stmtList -> END .)
    POLYGON         reduce using rule 3 (stmtList -> END .)
    CIRCLE          reduce using rule 3 (stmtList -> END .)
    MERGE           reduce using rule 3 (stmtList -> END .)
    READ_MOLECULE   reduce using rule 3 (stmtList -> END .)
    WRITE_MOLECULE  reduce using rule 3 (stmtList -> END .)
    SCATTER         reduce using rule 3 (stmtList -> END .)
    MARK            reduce using rule 3 (stmtList -> END .)
    $end            reduce using rule 3 (stmtList -> END .)


state 2

    (37) statement -> WRITE_MOLECULE . dataObject outPath
    (16) dataObject -> . NAME

    NAME            shift and go to state 21

    dataObject                     shift and go to state 20

state 3

    (36) statement -> READ_MOLECULE . newObject filePath
    (17) newObject -> . NAME

    NAME            shift and go to state 23

    newObject                      shift and go to state 22

state 4

    (27) statement -> CORRELATION . dataObject dataObject outPath
    (16) dataObject -> . NAME

    NAME            shift and go to state 21

    dataObject                     shift and go to state 24

state 5

    (2) stmtList -> statement . stmtList
    (2) stmtList -> . statement stmtList
    (3) stmtList -> . END
    (4) statement -> . SET setList
    (12) statement -> . READ_GRAPH filePath stmtList
    (13) statement -> . READ_PICTURE newObject filePath
    (18) statement -> . FIT newObject
    (19) statement -> . TIME_LINE dataObject outPath
    (20) statement -> . FIT newObject literal literal literal literal
    (21) statement -> . FIT newObject literal literal
    (22) statement -> . FIT newObject literal literal literal literal literal literal
    (23) statement -> . DISTRICT_ANALYZE dataObject dataObject outPath literal literal
    (24) statement -> . FILTER dataObject newObject dataObject literal literal
    (25) statement -> . FILTER dataObject newObject dataObject
    (26) statement -> . FILTER dataObject newObject literal literal
    (27) statement -> . CORRELATION dataObject dataObject outPath
    (28) statement -> . POLYGON newObject pointList
    (29) statement -> . CIRCLE newObject literal literal literal
    (32) statement -> . MERGE newObject dataObjectList
    (33) statement -> . MERGE SAME_TIME newObject dataObjectList
    (36) statement -> . READ_MOLECULE newObject filePath
    (37) statement -> . WRITE_MOLECULE dataObject outPath
    (38) statement -> . SCATTER newObject scatterList
    (43) statement -> . MARK dataObject outPath literal literal literal markList
    (44) statement -> . MARK dataObject outPath literal literal markList
    (45) statement -> . MARK dataObject outPath literal markList
    (46) statement -> . MARK dataObject outPath markList

    END             shift and go to state 1
    SET             shift and go to state 7
    READ_GRAPH      shift and go to state 12
    READ_PICTURE    shift and go to state 16
    FIT             shift and go to state 6
    TIME_LINE       shift and go to state 10
    DISTRICT_ANALYZE shift and go to state 13
    FILTER          shift and go to state 8
    CORRELATION     shift and go to state 4
    POLYGON         shift and go to state 18
    CIRCLE          shift and go to state 11
    MERGE           shift and go to state 19
    READ_MOLECULE   shift and go to state 3
    WRITE_MOLECULE  shift and go to state 2
    SCATTER         shift and go to state 15
    MARK            shift and go to state 14

    statement                      shift and go to state 5
    stmtList                       shift and go to state 25

state 6

    (18) statement -> FIT . newObject
    (20) statement -> FIT . newObject literal literal literal literal
    (21) statement -> FIT . newObject literal literal
    (22) statement -> FIT . newObject literal literal literal literal literal literal
    (17) newObject -> . NAME

    NAME            shift and go to state 23

    newObject                      shift and go to state 26

state 7

    (4) statement -> SET . setList
    (5) setList -> . paraStmt setList
    (6) setList -> . END
    (7) paraStmt -> . parameter literal
    (8) parameter -> . NAME

    END             shift and go to state 27
    NAME            shift and go to state 28

    parameter                      shift and go to state 29
    paraStmt                       shift and go to state 30
    setList                        shift and go to state 31

state 8

    (24) statement -> FILTER . dataObject newObject dataObject literal literal
    (25) statement -> FILTER . dataObject newObject dataObject
    (26) statement -> FILTER . dataObject newObject literal literal
    (16) dataObject -> . NAME

    NAME            shift and go to state 21

    dataObject                     shift and go to state 32

state 9

    (0) S' -> program .



state 10

    (19) statement -> TIME_LINE . dataObject outPath
    (16) dataObject -> . NAME

    NAME            shift and go to state 21

    dataObject                     shift and go to state 33

state 11

    (29) statement -> CIRCLE . newObject literal literal literal
    (17) newObject -> . NAME

    NAME            shift and go to state 23

    newObject                      shift and go to state 34

state 12

    (12) statement -> READ_GRAPH . filePath stmtList
    (14) filePath -> . literal
    (9) literal -> . STRING
    (10) literal -> . NUMBER
    (11) literal -> . FLOAT

    STRING          shift and go to state 35
    NUMBER          shift and go to state 39
    FLOAT           shift and go to state 38

    filePath                       shift and go to state 37
    literal                        shift and go to state 36

state 13

    (23) statement -> DISTRICT_ANALYZE . dataObject dataObject outPath literal literal
    (16) dataObject -> . NAME

    NAME            shift and go to state 21

    dataObject                     shift and go to state 40

state 14

    (43) statement -> MARK . dataObject outPath literal literal literal markList
    (44) statement -> MARK . dataObject outPath literal literal markList
    (45) statement -> MARK . dataObject outPath literal markList
    (46) statement -> MARK . dataObject outPath markList
    (16) dataObject -> . NAME

    NAME            shift and go to state 21

    dataObject                     shift and go to state 41

state 15

    (38) statement -> SCATTER . newObject scatterList
    (17) newObject -> . NAME

    NAME            shift and go to state 23

    newObject                      shift and go to state 42

state 16

    (13) statement -> READ_PICTURE . newObject filePath
    (17) newObject -> . NAME

    NAME            shift and go to state 23

    newObject                      shift and go to state 43

state 17

    (1) program -> stmtList .

    $end            reduce using rule 1 (program -> stmtList .)


state 18

    (28) statement -> POLYGON . newObject pointList
    (17) newObject -> . NAME

    NAME            shift and go to state 23

    newObject                      shift and go to state 44

state 19

    (32) statement -> MERGE . newObject dataObjectList
    (33) statement -> MERGE . SAME_TIME newObject dataObjectList
    (17) newObject -> . NAME

    SAME_TIME       shift and go to state 46
    NAME            shift and go to state 23

    newObject                      shift and go to state 45

state 20

    (37) statement -> WRITE_MOLECULE dataObject . outPath
    (15) outPath -> . literal
    (9) literal -> . STRING
    (10) literal -> . NUMBER
    (11) literal -> . FLOAT

    STRING          shift and go to state 35
    NUMBER          shift and go to state 39
    FLOAT           shift and go to state 38

    outPath                        shift and go to state 48
    literal                        shift and go to state 47

state 21

    (16) dataObject -> NAME .

    STRING          reduce using rule 16 (dataObject -> NAME .)
    NUMBER          reduce using rule 16 (dataObject -> NAME .)
    FLOAT           reduce using rule 16 (dataObject -> NAME .)
    NAME            reduce using rule 16 (dataObject -> NAME .)
    END             reduce using rule 16 (dataObject -> NAME .)
    SET             reduce using rule 16 (dataObject -> NAME .)
    READ_GRAPH      reduce using rule 16 (dataObject -> NAME .)
    READ_PICTURE    reduce using rule 16 (dataObject -> NAME .)
    FIT             reduce using rule 16 (dataObject -> NAME .)
    TIME_LINE       reduce using rule 16 (dataObject -> NAME .)
    DISTRICT_ANALYZE reduce using rule 16 (dataObject -> NAME .)
    FILTER          reduce using rule 16 (dataObject -> NAME .)
    CORRELATION     reduce using rule 16 (dataObject -> NAME .)
    POLYGON         reduce using rule 16 (dataObject -> NAME .)
    CIRCLE          reduce using rule 16 (dataObject -> NAME .)
    MERGE           reduce using rule 16 (dataObject -> NAME .)
    READ_MOLECULE   reduce using rule 16 (dataObject -> NAME .)
    WRITE_MOLECULE  reduce using rule 16 (dataObject -> NAME .)
    SCATTER         reduce using rule 16 (dataObject -> NAME .)
    MARK            reduce using rule 16 (dataObject -> NAME .)


state 22

    (36) statement -> READ_MOLECULE newObject . filePath
    (14) filePath -> . literal
    (9) literal -> . STRING
    (10) literal -> . NUMBER
    (11) literal -> . FLOAT

    STRING          shift and go to state 35
    NUMBER          shift and go to state 39
    FLOAT           shift and go to state 38

    filePath                       shift and go to state 49
    literal                        shift and go to state 36

state 23

    (17) newObject -> NAME .

    STRING          reduce using rule 17 (newObject -> NAME .)
    NUMBER          reduce using rule 17 (newObject -> NAME .)
    FLOAT           reduce using rule 17 (newObject -> NAME .)
    END             reduce using rule 17 (newObject -> NAME .)
    SET             reduce using rule 17 (newObject -> NAME .)
    READ_GRAPH      reduce using rule 17 (newObject -> NAME .)
    READ_PICTURE    reduce using rule 17 (newObject -> NAME .)
    FIT             reduce using rule 17 (newObject -> NAME .)
    TIME_LINE       reduce using rule 17 (newObject -> NAME .)
    DISTRICT_ANALYZE reduce using rule 17 (newObject -> NAME .)
    FILTER          reduce using rule 17 (newObject -> NAME .)
    CORRELATION     reduce using rule 17 (newObject -> NAME .)
    POLYGON         reduce using rule 17 (newObject -> NAME .)
    CIRCLE          reduce using rule 17 (newObject -> NAME .)
    MERGE           reduce using rule 17 (newObject -> NAME .)
    READ_MOLECULE   reduce using rule 17 (newObject -> NAME .)
    WRITE_MOLECULE  reduce using rule 17 (newObject -> NAME .)
    SCATTER         reduce using rule 17 (newObject -> NAME .)
    MARK            reduce using rule 17 (newObject -> NAME .)
    NAME            reduce using rule 17 (newObject -> NAME .)


state 24

    (27) statement -> CORRELATION dataObject . dataObject outPath
    (16) dataObject -> . NAME

    NAME            shift and go to state 21

    dataObject                     shift and go to state 50

state 25

    (2) stmtList -> statement stmtList .

    END             reduce using rule 2 (stmtList -> statement stmtList .)
    SET             reduce using rule 2 (stmtList -> statement stmtList .)
    READ_GRAPH      reduce using rule 2 (stmtList -> statement stmtList .)
    READ_PICTURE    reduce using rule 2 (stmtList -> statement stmtList .)
    FIT             reduce using rule 2 (stmtList -> statement stmtList .)
    TIME_LINE       reduce using rule 2 (stmtList -> statement stmtList .)
    DISTRICT_ANALYZE reduce using rule 2 (stmtList -> statement stmtList .)
    FILTER          reduce using rule 2 (stmtList -> statement stmtList .)
    CORRELATION     reduce using rule 2 (stmtList -> statement stmtList .)
    POLYGON         reduce using rule 2 (stmtList -> statement stmtList .)
    CIRCLE          reduce using rule 2 (stmtList -> statement stmtList .)
    MERGE           reduce using rule 2 (stmtList -> statement stmtList .)
    READ_MOLECULE   reduce using rule 2 (stmtList -> statement stmtList .)
    WRITE_MOLECULE  reduce using rule 2 (stmtList -> statement stmtList .)
    SCATTER         reduce using rule 2 (stmtList -> statement stmtList .)
    MARK            reduce using rule 2 (stmtList -> statement stmtList .)
    $end            reduce using rule 2 (stmtList -> statement stmtList .)


state 26

    (18) statement -> FIT newObject .
    (20) statement -> FIT newObject . literal literal literal literal
    (21) statement -> FIT newObject . literal literal
    (22) statement -> FIT newObject . literal literal literal literal literal literal
    (9) literal -> . STRING
    (10) literal -> . NUMBER
    (11) literal -> . FLOAT

    END             reduce using rule 18 (statement -> FIT newObject .)
    SET             reduce using rule 18 (statement -> FIT newObject .)
    READ_GRAPH      reduce using rule 18 (statement -> FIT newObject .)
    READ_PICTURE    reduce using rule 18 (statement -> FIT newObject .)
    FIT             reduce using rule 18 (statement -> FIT newObject .)
    TIME_LINE       reduce using rule 18 (statement -> FIT newObject .)
    DISTRICT_ANALYZE reduce using rule 18 (statement -> FIT newObject .)
    FILTER          reduce using rule 18 (statement -> FIT newObject .)
    CORRELATION     reduce using rule 18 (statement -> FIT newObject .)
    POLYGON         reduce using rule 18 (statement -> FIT newObject .)
    CIRCLE          reduce using rule 18 (statement -> FIT newObject .)
    MERGE           reduce using rule 18 (statement -> FIT newObject .)
    READ_MOLECULE   reduce using rule 18 (statement -> FIT newObject .)
    WRITE_MOLECULE  reduce using rule 18 (statement -> FIT newObject .)
    SCATTER         reduce using rule 18 (statement -> FIT newObject .)
    MARK            reduce using rule 18 (statement -> FIT newObject .)
    STRING          shift and go to state 35
    NUMBER          shift and go to state 39
    FLOAT           shift and go to state 38

    literal                        shift and go to state 51

state 27

    (6) setList -> END .
